[metadata]
description = fsspec filesystem for OSS
name = ossfs
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/fsspec/ossfs
platforms=any
authors = Yanxiang Gao
maintainer_email = gao@iterive.ai
download_url= https://github.com/fsspec/ossfs
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta


[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    fsspec==2023.1.0
    oss2==2.16.0

[options.extras_require]
docs =
    mkdocs==1.3.1
    mkdocs-gen-files==0.3.5
    mkdocs-material==8.4.1
    mkdocs-section-index==0.3.4
    mkdocstrings-python==0.7.1
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    pylint-pytest==1.1.2
    mypy==0.971
    requests==2.28.1
    aliyun-python-sdk-sts==3.1.0
dev =
    %(tests)s
    %(docs)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
